added methods to record execution times of functions

--- a/Big Matrix Multiplication and Its Applications.ipynb
+++ b/Big Matrix Multiplication and Its Applications.ipynb
@@ -5,20 +5,12 @@
    "id": "cardiac-novelty",
    "metadata": {},
    "source": [
-    "# Big Matrix Multiplication and Its Applications"
+    "# Matrix Multplication Algorithms Analysis"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "immune-savage",
-   "metadata": {},
-   "source": [
-    "# Table of Contents"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "affiliated-processing",
+   "id": "coastal-seeker",
    "metadata": {},
    "source": [
     "# Abstract"
@@ -27,10 +19,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "skilled-coast",
+   "id": "medium-domestic",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "immune-savage",
+   "metadata": {},
+   "source": [
+    "# Table of Contents\n",
+    "\n",
+    "1. [Abstract](#Abstract)\n",
+    "2. [Introduction](#Introduction)\n",
+    "3. [Objectives](#Objectives)\n",
+    "4. [Algorithms](#Algorithms)\n",
+    "    1. [Naive Method](#naive)\n",
+    "    2. [Strassen's Method](#strassen)\n",
+    "    3. [GEMM Method](#GEMM)\n",
+    "5. [Programming Languages](#languages)\n",
+    "6. [Benchmarks](#Benchmarks)\n",
+    "    1. [Matrices](#matrices)\n",
+    "    2. [Recordings](#recordings)\n",
+    "    3. [Analysis](#analysis)\n",
+    "7. [Conclusions](#Conclusions)\n",
+    "8. [Bibliography](#Bibliography)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -41,14 +56,14 @@
     "\n",
     "Given two matrices $A$ and $B$, each with $n$ rows and columns. Matrix multiplication is defined as the result of the dot product of every $ith$ row of matrix $A$ by each $jth$ column of matrix $B$. This operation yields a new matrix of $n^2$ dimmensions, where the $ijth$ position contains the product of the computations previously described.\n",
     "\n",
-    "Common use cases for this kind of operation are:\n",
+    "**Common use cases for this kind of operation are:**\n",
     "\n",
     "* Solving systems of linear equations.\n",
     "* Solving intricate graph problems.\n",
-    "* Representing the logic gates applied over a quantum system.\n",
+    "* Representing the logic gates applied in a quantum system.\n",
     "* Applying rotations to projected objects in a 3D plane (Computer Graphics).\n",
     "\n",
-    "Among many others.\n",
+    "**Among many others.**\n",
     "\n",
     "Despite being an extremely useful operation, it regretably can not be used in every desired scenario.<br/> \n",
     "Due to the nature of the operations required to calculate the resulting matrix. Cases where we deal with matrixes of great dimmensions rapidly become unfeasible, leaving a vast amount of problems unsolved. For this reason, it is always important to use efficient methods when dealing with great ammounts of data.\n",
@@ -90,9 +105,9 @@
    "source": [
     "Matrix multiplication have several implementations, some being more favorable certain problems, others being applicable to only certain types of matrices. For the purpose of narrowing down our analysis, we will be focusing on three specific algorithms: \n",
     "\n",
-    "1. Naive Algorithm\n",
-    "2. Strassens Algorithm\n",
-    "3. GEMM Algorithm\n",
+    "1. Naive Algorithm.\n",
+    "2. Strassens Algorithm.\n",
+    "3. GEMM Algorithm.\n",
     "\n",
     "While there are plenty of other algorithms that could arguably achieve a better performance than these, they were not selected because they were either theoretical algorithms, or too intricate to be analyzed in this paper.\n",
     "\n",
@@ -104,7 +119,7 @@
    "id": "exclusive-dayton",
    "metadata": {},
    "source": [
-    "## Naive Method"
+    "## Naive Method <a name=\"naive\"/>"
    ]
   },
   {
@@ -112,18 +127,22 @@
    "id": "naughty-unknown",
    "metadata": {},
    "source": [
-    "Probably the simplest among all multiplication algorithms. It performs the inner product of each row by each column without any optimizations or caches. For square matrices, it's time complexity is considered to be $O(n^3)$  \n",
+    "Probably the simplest among all multiplication algorithms. It performs the inner product of each row by each column without any optimizations or caches. For square matrices, it's time complexity is considered to be $O(n^3)$.  \n",
     "\n",
-    "Pseudo Code:\n",
-    "<br/>Pros:<br/>\n",
-    "`* Algorithm is easy to understand and implement.`\n",
-    "<br/>Cons:<br/>\n",
-    "`* $O(n^3)$ which becomes computationally prohibitive for big matrices.`\n",
-    "\n",
-    "\n",
-    "<img align=\"left\" width=\"700px\" src=\"assets/matrix_multiplications.png\">\n",
+    "**Pseudo Code:**<br/>\n",
+    "<img align=\"center\" width=\"600px\" src=\"assets/naive_pseudocode.png\"/>\n",
+    "<br/>**Pros:**<br/>\n",
+    "- Algorithm is easy to understand and implement.\n",
     "\n",
     "\n",
+    "<br/>**Cons:**<br/>\n",
+    "- $O(n^3)$ time complexity which hinders this algorithm's ability to compute big matrices.\n",
+    "\n",
+    "\n",
+    "**Another visualization for this algorithm is the following:<br/>**\n",
+    "<img align=\"center\" width=\"700px\" src=\"assets/matrix_multiplications.png\"/>\n",
+    "\n",
+    "Where $c1 = a1*b1 + a2*b4 + a3*b7$.\n",
     "\n",
     "\n"
    ]
@@ -133,17 +152,35 @@
    "id": "architectural-helmet",
    "metadata": {},
    "source": [
-    "## Strassens Method"
+    "## Strassen's Method <a name=\"strassen\"/>"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bulgarian-aruba",
+   "cell_type": "markdown",
+   "id": "foreign-cooling",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "https://www.baeldung.com/cs/matrix-multiplication-algorithms"
+    "Strassen's algorithm provides an optimization over the naive method by applying various strategies commonly known as dynamic programming, divide and conquer, and recursion. It is important to note that simply using divide and conquer will not improve the performance of this algorithm over the naive method. It is the combination of all these methods which allows to reuse previously computed values.\n",
+    "\n",
+    "Using a recursive diving and conquer approach where A, B and C are square matrices, and a, b, c, d, e, f, g, h are submatrices, requires eight recursive calls as shown below: \n",
+    "\n",
+    "<img src=\"assets/naive_divide_and_conquer.png\">\n",
+    "where $ae, bg, af, bh, ce, dg, cf, dh$ represent a recursive call. Each of this involving a submatrix multiplication\n",
+    "\n",
+    "On the other hand, strassens strives for seven recursion calls by applying the following scheme:\n",
+    "\n",
+    "<img src=\"assets/strassens_algorithm.png\">\n",
+    "\n",
+    "where $p1$ to $p7$ represent a recursive call involving the opperations shown above.\n",
+    "\n",
+    "<br/>**Pros:**<br/>\n",
+    "- $O(n^{log7})$ time complexity which is slightly better than cubic complexity.\n",
+    "\n",
+    "\n",
+    "<br/>**Cons:**<br/>\n",
+    "- Submatrices in recursion take additional space.\n",
+    "- Larger errors accumulate using this method due to limited precision of computations.\n",
+    "- This algorithm can only be applied to square matrices.\n"
    ]
   },
   {
@@ -151,7 +188,7 @@
    "id": "saved-probability",
    "metadata": {},
    "source": [
-    "## GEMM Method"
+    "## GEMM Method <a name=\"GEMM\"/>"
    ]
   },
   {
@@ -163,9 +200,81 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "graphic-wealth",
+   "metadata": {},
+   "source": [
+    "# Programming Languages <a name=\"languages\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fiscal-evaluation",
+   "metadata": {},
+   "source": [
+    "For the purpose of avoiding biases, and having a more broad perspective, we've chosen to run all of these algorithms in three different programming languages: **C++, Python, and Julia**. This will allow us to make a more accurate analysis after all of the benchmarks have been recorded."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "reasonable-brain",
+   "metadata": {},
+   "source": [
+    "# Benchmarks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "neutral-middle",
+   "metadata": {},
+   "source": [
+    "## Matrices <a name=\"matrices\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "photographic-holocaust",
+   "metadata": {},
+   "source": [
+    "All of the matrices used in this paper were taken from [https://sparse.tamu.edu/](https://sparse.tamu.edu/) in a .mtx format. Due to the constraints of strassens algorithm only square matrices with side $n = 2^k$ where $k \\in N$.\n",
+    "\n",
+    "\n",
+    "\n",
+    "| File | Number of rows and columns | Number of non-zero elements  | Description |\n",
+    "|---|---|---|---|\n",
+    "| 1  | 4  | 4  |  4 |\n",
+    "| 2  | 4  |  4 |  4  |\n",
+    "| 3 | 4  |  4 | 4  |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "potential-leader",
+   "metadata": {},
+   "source": [
+    "## Recordings <a name=\"recordings\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "rough-summary",
+   "metadata": {},
+   "source": [
+    "In order to facilitate the analysis of data, we've decided to track all of our benchmarks in the benchmarks.csv file. Each of the algorithm's implementations will write to this file for every matrix multiplication mentioned above 1000 times. This in turn will give us an average which will be a good representation of how each algorithm performs in each situation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "tutorial-capitol",
+   "metadata": {},
+   "source": [
+    "## Analysis <a name=\"analysis\"/>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "metallic-israel",
+   "execution_count": null,
+   "id": "cardiovascular-frost",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,16 +286,8 @@
     "        for j in range(matrix_two):\n",
     "            for k in range(len(matrix_one[0])):\n",
     "                answer[i][j] += matrix_one[i][k] * matrix_two[k][j]\n",
-    "    return answer\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "intended-region",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return answer\n",
+    "\n",
     "import time\n",
     "\n",
     "def recordTime(y_axis, x_axis, func, *args, **kwargs):\n",
@@ -195,50 +296,8 @@
     "    total = time.now() - initial\n",
     "    \n",
     "def generateMatrixes():\n",
-    "    pass\n",
-    "    \n",
-    "    \n"
+    "    pass"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "graphic-wealth",
-   "metadata": {},
-   "source": [
-    "# Programming Languages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "exceptional-athletics",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "reasonable-brain",
-   "metadata": {},
-   "source": [
-    "# Benchmarks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "extended-court",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "driven-participant",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -270,7 +329,13 @@
    "id": "featured-public",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "https://www.baeldung.com/cs/matrix-multiplication-algorithms\n",
+    "    \n",
+    "    https://www.geeksforgeeks.org/strassens-matrix-multiplication/\n",
+    "\n",
+    "https://www.baeldung.com/cs/matrix-multiplication-algorithms"
+   ]
   }
  ],
  "metadata": {
