modified sparse.cpp file

--- a/Big Matrix Multiplication and Its Applications.ipynb
+++ b/Big Matrix Multiplication and Its Applications.ipynb
@@ -37,7 +37,7 @@
     "4. [Algorithms](#Algorithms)\n",
     "    1. [Naive Method](#naive)\n",
     "    2. [Strassen's Method](#strassen)\n",
-    "    3. [GEMM Method](#GEMM)\n",
+    "    3. [Dictionary Of Keys Representation Method](#DOK)\n",
     "5. [Programming Languages](#languages)\n",
     "6. [Benchmarks](#Benchmarks)\n",
     "    1. [Matrices](#matrices)\n",
@@ -107,7 +107,7 @@
     "\n",
     "1. Naive Algorithm.\n",
     "2. Strassens Algorithm.\n",
-    "3. GEMM Algorithm.\n",
+    "3. Dictionary Of Keys Representation.\n",
     "\n",
     "While there are plenty of other algorithms that could arguably achieve a better performance than these, they were not selected because they were either theoretical algorithms, or too intricate to be analyzed in this paper.\n",
     "\n",
@@ -188,7 +188,7 @@
    "id": "saved-probability",
    "metadata": {},
    "source": [
-    "## GEMM Method <a name=\"GEMM\"/>"
+    "## Dictionary Of Keys (DOK) Representation Method <a name=\"DOK\"/>"
    ]
   },
   {
@@ -238,13 +238,24 @@
    "source": [
     "All of the matrices used in this paper were taken from [https://sparse.tamu.edu/](https://sparse.tamu.edu/) in a .mtx format. Due to the constraints of strassens algorithm only square matrices with side $n = 2^k$ where $k \\in N$.\n",
     "\n",
+    "They can be found in the ./matrices/ directory, and are described as follows:\n",
     "\n",
+    "| File | Number of rows and columns | Number of non-zero elements |\n",
+    "|---|---|---|\n",
+    "| can_256.mtx | 256 | 2916 |\n",
+    "| delaunay_n10.mtx | 1024 | 6112 |\n",
+    "| dw256B.mtx | 256 | 2500 |\n",
+    "| dwa512.mtx | 512 | 2480 |\n",
+    "| dwb512.mtx | 512 | 2500 |\n",
+    "| dwt_512.mtx | 512 | 3502 |\n",
+    "| GD99_b.mtx | 64 | 252 |\n",
+    "| gre_512.mtx | 512 | 1976 |\n",
+    "| Hamrle1.mtx | 32  | 98 |\n",
+    "| ibm32.mtx | 32 | 126 |\n",
     "\n",
-    "| File | Number of rows and columns | Number of non-zero elements  | Description |\n",
-    "|---|---|---|---|\n",
-    "| 1  | 4  | 4  |  4 |\n",
-    "| 2  | 4  |  4 |  4  |\n",
-    "| 3 | 4  |  4 | 4  |"
+    "Matrix sizes ranging from $2^5$ to $2^{10}$ were chosen when selecting to matrices in order to observe how execution times increase when running our benchmarks. Bigger sizes were not selected as these problems quickly become slow to compute. Thus, it is unfeasible to process them because we established that each algorithm must be run multiple times for each matrix. \n",
+    "\n",
+    "Similarly, number of non-zero elements range from 126 to 2916. For matrices of equal sizes, this will be an additional point of comparison that is also worth analyzing."
    ]
   },
   {
@@ -260,7 +271,7 @@
    "id": "rough-summary",
    "metadata": {},
    "source": [
-    "In order to facilitate the analysis of data, we've decided to track all of our benchmarks in the benchmarks.csv file. Each of the algorithm's implementations will write to this file for every matrix multiplication mentioned above 1000 times. This in turn will give us an average which will be a good representation of how each algorithm performs in each situation."
+    "In order to facilitate the analysis of data, we've decided to track all of our benchmarks in the benchmarks.csv file. Each of the algorithm's implementations will write to this file for every matrix multiplication mentioned above 5 times. This in turn will give us an average which will be a good representation of how each algorithm performs in each situation."
    ]
   },
   {
@@ -273,8 +284,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "sudden-acquisition",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>language</th>\n",
+       "      <th>algorithm</th>\n",
+       "      <th>matrix</th>\n",
+       "      <th>matrix_size</th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [language, algorithm, matrix, matrix_size, time]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "dataframe = pd.read_csv(\"benchmarks.csv\")\n",
+    "cpp_measurements = dataframe[dataframe[\"language\"] == \"cpp\"]\n",
+    "python_measurements = dataframe[dataframe[\"language\"] == \"python\"]\n",
+    "julia_measurements = dataframe[dataframe[\"language\"] == \"julia\"]\n",
+    "\n",
+    "julia_measurements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sixth-workplace",
+   "metadata": {},
+   "source": [
+    "# Conclusions"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cardiovascular-frost",
+   "id": "twelve-state",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,22 +381,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sixth-workplace",
-   "metadata": {},
-   "source": [
-    "# Conclusions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "twelve-state",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "orange-dominant",
    "metadata": {},
    "source": [
@@ -332,7 +396,7 @@
    "source": [
     "https://www.baeldung.com/cs/matrix-multiplication-algorithms\n",
     "    \n",
-    "    https://www.geeksforgeeks.org/strassens-matrix-multiplication/\n",
+    "https://www.geeksforgeeks.org/strassens-matrix-multiplication/\n",
     "\n",
     "https://www.baeldung.com/cs/matrix-multiplication-algorithms"
    ]
