advancements in julia methods

--- a/Big Matrix Multiplication and Its Applications.ipynb
+++ b/Big Matrix Multiplication and Its Applications.ipynb
@@ -192,12 +192,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "strange-protest",
+   "cell_type": "markdown",
+   "id": "driving-celtic",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Dictionary of keys representation allows an optimization of the naive method. It is especially useful for sparse matrices where the number of non-zero elements is relatively low when compared to number of total elements in the matrix.\n",
+    "\n",
+    "**Example Dictionary of Keys(DOK) representation:**\n",
+    "<img src=\"./assets/sparse_matrix.png\">\n",
+    "\n",
+    "\n",
+    "Instead of iterating over every index of a matrix, it iterates over the indexes and values of the dictionary representatiom.\n",
+    "For sparse matrices, this reduces time complexity from $O(n^3)$ to $O(n^2)$ and space complexity from $O(n^2)$ to $O(n)$. The reason behind this is that computations involving zero values are disregarded altogether."
+   ]
   },
   {
    "cell_type": "markdown",
