plugged multiplications algorithms to the main file running julia benchmarks

--- a/Big Matrix Multiplication and Its Applications.ipynb
+++ b/Big Matrix Multiplication and Its Applications.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "sudden-acquisition",
    "metadata": {},
    "outputs": [
@@ -324,17 +324,195 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr04.mtx</td>\n",
+       "      <td>274</td>\n",
+       "      <td>4.380219e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr04.mtx</td>\n",
+       "      <td>274</td>\n",
+       "      <td>4.354696e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr04.mtx</td>\n",
+       "      <td>274</td>\n",
+       "      <td>4.396718e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr04.mtx</td>\n",
+       "      <td>274</td>\n",
+       "      <td>4.394620e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr04.mtx</td>\n",
+       "      <td>274</td>\n",
+       "      <td>4.737315e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr05.mtx</td>\n",
+       "      <td>443</td>\n",
+       "      <td>1.918261e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr05.mtx</td>\n",
+       "      <td>443</td>\n",
+       "      <td>1.884552e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr05.mtx</td>\n",
+       "      <td>443</td>\n",
+       "      <td>1.877316e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr05.mtx</td>\n",
+       "      <td>443</td>\n",
+       "      <td>1.884304e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr05.mtx</td>\n",
+       "      <td>443</td>\n",
+       "      <td>1.979674e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr07.mtx</td>\n",
+       "      <td>1612</td>\n",
+       "      <td>1.020434e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr07.mtx</td>\n",
+       "      <td>1612</td>\n",
+       "      <td>1.041841e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>bcspwr07.mtx</td>\n",
+       "      <td>1612</td>\n",
+       "      <td>1.048425e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>python</td>\n",
+       "      <td>strassen</td>\n",
+       "      <td>can_256.mtx</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2.199258e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>python</td>\n",
+       "      <td>strassen</td>\n",
+       "      <td>can_256.mtx</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2.193603e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>python</td>\n",
+       "      <td>strassen</td>\n",
+       "      <td>can_256.mtx</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2.225149e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>python</td>\n",
+       "      <td>strassen</td>\n",
+       "      <td>can_256.mtx</td>\n",
+       "      <td>256</td>\n",
+       "      <td>2.419310e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>python</td>\n",
+       "      <td>sparse</td>\n",
+       "      <td>can_256.mtx</td>\n",
+       "      <td>256</td>\n",
+       "      <td>4.441593e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>python</td>\n",
+       "      <td>sparse</td>\n",
+       "      <td>delaunay_n10.mtx</td>\n",
+       "      <td>1024</td>\n",
+       "      <td>2.152461e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>python</td>\n",
+       "      <td>naive</td>\n",
+       "      <td>delaunay_n10.mtx</td>\n",
+       "      <td>1024</td>\n",
+       "      <td>3.028588e+05</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [language, algorithm, matrix, matrix_size, time]\n",
-       "Index: []"
+       "   language algorithm            matrix  matrix_size          time\n",
+       "5    python     naive      bcspwr04.mtx          274  4.380219e+03\n",
+       "6    python     naive      bcspwr04.mtx          274  4.354696e+03\n",
+       "7    python     naive      bcspwr04.mtx          274  4.396718e+03\n",
+       "8    python     naive      bcspwr04.mtx          274  4.394620e+03\n",
+       "9    python     naive      bcspwr04.mtx          274  4.737315e+03\n",
+       "10   python     naive      bcspwr05.mtx          443  1.918261e+04\n",
+       "11   python     naive      bcspwr05.mtx          443  1.884552e+04\n",
+       "12   python     naive      bcspwr05.mtx          443  1.877316e+04\n",
+       "13   python     naive      bcspwr05.mtx          443  1.884304e+04\n",
+       "14   python     naive      bcspwr05.mtx          443  1.979674e+04\n",
+       "15   python     naive      bcspwr07.mtx         1612  1.020434e+06\n",
+       "16   python     naive      bcspwr07.mtx         1612  1.041841e+06\n",
+       "17   python     naive      bcspwr07.mtx         1612  1.048425e+06\n",
+       "18   python  strassen       can_256.mtx          256  2.199258e+04\n",
+       "19   python  strassen       can_256.mtx          256  2.193603e+04\n",
+       "20   python  strassen       can_256.mtx          256  2.225149e+04\n",
+       "21   python  strassen       can_256.mtx          256  2.419310e+04\n",
+       "24   python    sparse       can_256.mtx          256  4.441593e+02\n",
+       "37   python    sparse  delaunay_n10.mtx         1024  2.152461e+03\n",
+       "38   python     naive  delaunay_n10.mtx         1024  3.028588e+05"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +525,7 @@
     "python_measurements = dataframe[dataframe[\"language\"] == \"python\"]\n",
     "julia_measurements = dataframe[dataframe[\"language\"] == \"julia\"]\n",
     "\n",
-    "julia_measurements"
+    "python_measurements"
    ]
   },
   {
