--- a/Big Matrix Multiplication and Its Applications.ipynb
+++ b/Big Matrix Multiplication and Its Applications.ipynb
@@ -113,7 +113,7 @@
     "\n",
     "While there are plenty of other algorithms that could arguably achieve a better performance than these, they were not selected because they were either theoretical algorithms, or too intricate to be analyzed in this paper.\n",
     "\n",
-    "In the following section we will display a brief overview of each of the selected algorithms."
+    "In the following section a brief overview of each of the selected algorithms will be displayed."
    ]
   },
   {
@@ -129,7 +129,7 @@
    "id": "naughty-unknown",
    "metadata": {},
    "source": [
-    "Probably the simplest among all multiplication algorithms. It performs the inner product of each row by each column without any optimizations or caches. For square matrices, it's time complexity is considered to be $O(n^3)$.  \n",
+    "Probably the simplest among all of the multiplication algorithms. It performs the inner product of each row by each column without any optimizations or caches. For square matrices, it's time complexity is considered to be $O(n^3)$.  \n",
     "\n",
     "**Pseudo Code:**<br/>\n",
     "<img align=\"center\" width=\"600px\" src=\"assets/naive_pseudocode.png\"/>\n",
